# Project-EyeTracker

./: .gitignore  .pre-commit-config.yaml  Codes.html  Console_execution.html  Dockerfile  Documentation_fusionnée.html  LICENSE  README.md  docker-compose.yml  index.html  nginx.conf  pyproject.toml  search.js  setup.cfg
.github/workflows/: ci-cd.yml
Codes/: Carte_de_chaleur.html  Carte_de_chaleur.py  Code_V1.0.py  Code_V2.0.py  Code_V3.0.py  Code_V3_0.py  Code_V4.0.py  Code_V4_0.html  Code_V4_0.py  Console_execution.html  Console_execution.py  Reduction_video.html  Reduction_video.py  Test_timeline.html  Test_timeline.py  commit1.html
Outputs/: 20241015_0001_00_decoupe.csv  Clusters_Fixation.csv  Clusters_Fixation_Ordre.csv  Clusters_Temps_Fixation.csv  Donnees_cartes_de_chaleur.csv
Tests/: test_console.py
codes/: Code_V2.0.py  Code_principal_2024-Modified.py  Test_timeline.py
docs/: Carte_de_chaleur.html  Code_V4_0.html  Codes.html  Console_execution.html  Reduction_video.html  Test_timeline.html  index.html  search.js
docs/Codes/: Carte_de_chaleur.html  Code_V4_0.html  Console_execution.html  Reduction_video.html  Test_timeline.html
tutorials/: tutorial.md
