[tool.poetry]
name = "ProTech"
version = "0.1.0"
description = "ProTech sur l'EyeTracking"
authors = ["Max Leost <maxime.leost@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

matplotlib = "^3.8.0"
numpy = "^1.26.0"
scikit-learn = "^1.3.0"
opencv-python = "^4.8.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
