[tool.poetry]
name = "ProTech"
version = "0.1.0"
description = "ProTech sur l'EyeTracking"
authors = ["Max Leost <maxime.leost@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

matplotlib = "^3.8.0"
numpy = "^1.26.0"
scikit-learn = "^1.3.0"
opencv-python = "^4.8.0"
moviepy = "^2.2.1"
pandas = "^2.3.3"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
ruff = "^0.1.0"
flake8 = "^7.3.0"
mypy = "^1.19.0"
pre-commit = "^4.5.0"
pytest-mock = "^3.15.1"
types-requests = "^2.32.4"
black = "^25.11.0"

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = false
ignore_errors = true
explicit_package_bases = true
namespace_packages = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
